# Cartridge

./: .gitignore  CLAUDE.md
docs/: ARCHITECTURE.md  DATA_FLOW.md  DESIGN_DOC.md  FILE_STRUCTURE.md  NEXT_STEPS.md  orchestrator_api.md  run_registry_schema.md
docs/Individual Component Design/: ACTOR.md  ENGINE.md  LEARNER.md  ORCHESTRATOR.md  REPLAY.md
documentation/claude/: engine-rust-implementation-plan.md
proto/engine/v1/: engine.proto
proto/replay/v1/: replay.proto
services/actor-go/: Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod
services/actor-go/cmd/actor/: main.go
services/actor-go/internal/actor/: actor.go
services/actor-go/internal/config/: config.go
services/actor-go/internal/policy/: policy.go  random.go  random_test.go
services/actor-rust/: Cargo.toml  Dockerfile  README.md  build.rs
services/actor-rust/src/: actor.rs  config.rs  main.rs  policy.rs
services/engine-rust/: Cargo.toml  Dockerfile
services/engine-rust/engine-core/: Cargo.toml
services/engine-rust/engine-core/src/: adapter.rs  erased.rs  lib.rs  registry.rs  typed.rs
services/engine-rust/engine-proto/: Cargo.toml  build.rs
services/engine-rust/engine-proto/src/: engine.v1.rs  lib.rs
services/engine-rust/engine-server/: Cargo.toml
services/engine-rust/engine-server/src/: buffers.rs  lib.rs  main.rs  registry_init.rs  service.rs
services/engine-rust/games-tictactoe/: Cargo.toml
services/engine-rust/games-tictactoe/src/: lib.rs
services/learner-py/: README.md  pyproject.toml  test_improvements_validation.py  test_integration_validation.py
services/learner-py/learner/: __init__.py  checkpoints.py  config.py  control.py  core.py  datamodel.py  main.py  metrics.py  replay.py  replay_client.py  weights.py
services/learner-py/learner/algo/: __init__.py  networks.py  ppo.py  registry.py
services/learner-py/learner/proto/replay/v1/: replay_pb2.py  replay_pb2_grpc.py
services/learner-py/learner/utils/: logging.py  math.py
services/learner-py/tests/: test_config.py  test_ppo.py  test_replay_integration.py  test_utils_math.py
services/orchestrator-go/: PLAN.md  README.md  go.mod
services/orchestrator-go/cmd/server/: main.go
services/orchestrator-go/internal/config/: config.go
services/orchestrator-go/internal/events/: events.go  nats.go
services/orchestrator-go/internal/handlers/: heartbeat_test.go  heartbeat_v2.go
services/orchestrator-go/internal/health/: monitor.go
services/orchestrator-go/internal/http/: server.go  server_test.go
services/orchestrator-go/internal/metrics/: metrics.go
services/orchestrator-go/internal/middleware/: middleware.go
services/orchestrator-go/internal/service/: orchestrator.go
services/orchestrator-go/internal/storage/: postgres.go  storage.go
services/orchestrator-go/internal/types/: types.go  types_test.go
services/replay-go/: Dockerfile  README.md  buf.gen.yaml  go.mod  go.sum  integration_test.go
services/replay-go/cmd/server/: main.go
services/replay-go/internal/service/: replay.go
services/replay-go/internal/storage/: interface.go  memory.go  memory_test.go
services/replay-go/scripts/: generate.sh
