[package]
name = "actor-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actor"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Randomness and crypto
rand = "0.8"
rand_chacha = "0.3"

# Async and concurrency
tokio-stream = "0.1"
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Protobuf clients (will be generated)
tonic-build = "0.10"

# Time utilities
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }