[workspace]
members = [
    "engine-core",
    "engine-server",
    "engine-proto",
    "games-tictactoe",
    "../actor-rust"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Crypto and randomness
rand_chacha = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async and concurrency
once_cell = "1.19"
async-stream = "0.3"
tokio-stream = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Serialization helpers
serde = { version = "1.0", features = ["derive"] }

# Additional dependencies for actor-rust
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
rand = "0.8"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }