[tool.poetry]
name = "cartridge-learner"
version = "0.1.0"
description = "Learner service for Cartridge reinforcement learning platform"
authors = ["Cartridge Team <team@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "learner" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
grpcio = "^1.60.0"
pydantic = "^2.5.0"
prometheus-client = "^0.19.0"
aiohttp = "^3.8.0"
tenacity = "^8.2.0"
structlog = "^23.1.0"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"
pyyaml = "^6.0.1"
typing-extensions = "^4.9.0"
numpy = "^1.26.0"
safetensors = "^0.4.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.8.0"
ruff = "^0.3.4"

[tool.poetry.scripts]
learner = "learner.main:run"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["learner"]
