[package]
name = "games-tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
engine-proto = { path = "../engine-proto" }

# Crypto and randomness
rand_chacha = { workspace = true }
rand = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }